@@ -19,6 +19,9 @@ documents those changes that are of interest to users and admins.
     (everything after the equal sign to the end of the line is included without
     alteration).
  -- Do not install /etc/init.d/slurm or /etc/init.d/slurmdbd on AIX systems.
+ -- BLUEGENE - fixed check for small blocks if a node card of a midplane is
+    in an error state other jobs can still run on the midplane on other
+    nodecards.
 
 * Changes in SLURM 2.1.6-2
 ==========================
